delete and a litle style update impl

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@ body{
     padding: 4%;
     border-radius: 4%;
     margin-bottom: 4%;
+    width: 100%;
 }
 
  .taskButtons > form{
@@ -32,12 +33,6 @@ body{
 }
 .taakBalk > h3{
     text-decoration: underline;
-}
-.task input[type=checkbox] {
-    transform: scale(1.75);
-    margin-right: 10px;
-    margin-left: 20px;
-    margin-top: 15px;
 }
 .tags{
     /*margin-top: 12%;*/
@@ -71,5 +66,7 @@ body{
 }
 .showForm > input[type=submit]{
     font-size: 20px;
-   
+}
+form{
+    margin-left: 5%;
 }
